--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <!--文字の大きさの練習-->
+<br>
+<h1>練習問題2.2</h1>
+<br>
 <h1>Hello World</h1>
 <h2>Hello World</h2>
 <h3>Hello World</h3>
@@ -13,6 +16,9 @@
 <li>ほげほげ</li>
 <li>ほにゃらら</li>
 </ol>
+
+
+
 <dl>
 <dt>作者</dt>
 <dd>ジョン</dd>
@@ -31,7 +37,6 @@
 <dl>
 <dt>金貨を獲得している場合</dt>
 <dd>金貨一枚につき１０ポイント加算されます。</dd>
-
 <dt>銀貨を獲得している場合</dt>
 <dd>銀貨一枚につき１ポイント加算されます。</dd>
 <dt>枚数に関わらず、金貨と銀貨の両方を獲得している場合</dt>
@@ -39,7 +44,9 @@
 <dt>それ以外の場合</dt>
 <dd>ポイントは加算されません。</dd>
 </dl>
-
+<br>
+<h1>練習問題2.4</h1>
+<br>
 <table> 
 <caption>
 <strong>お寿司をどこで食べるか？その長所と短所</strong>
@@ -64,7 +71,8 @@
 <td>ネタが解凍もの、休みの日は混む</td>
 </tr> 
 </tbody> 
-</table> 
+</table>
+<br> 
 <table> 
 <caption><strong>お寿司をどこで食べるか？その長所と短所</strong></caption> 
 <thead><tr><th>どこで食べるか</th><th>長所</th><th>短所</th></tr></thead> 
@@ -72,7 +80,80 @@
 <td>ネタにこだわり、技術が素晴らしい</td><td>値段が時価で不安、予約が必要</td></tr> 
 <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる</td>
 <td>ネタが解凍もの、休みの日は混む</td></tr> 
-</tbody></table> 
+</tbody></table>
+<br>
+<h1>練習問題2.5</h1>
+<br>
+<ul>
+<li
+>参考資料を調べ、次のように表示されるHTMLを書きなさい。
+<p style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup><br />
+この授業は<b>情報特講１</b>で、<s>眠くなる</s>大変興味深い内容です。<br />
+<bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p>
+</li>
+</ul>
+<br>
+<h1>練習問題2.6</h1>
+<br>
+<p>テキスト入力：<input type="text"></p> 
+<br>
+<h1>練習問題2.7</h1>
+<br>
+<form action="xxx.php" method="post"><label>メール（ type="email"）:<input type="email" name="email"></label><input type="submit" value="送信 "></form>
+<form action="xxx.php" method="post"><label>URL（ type="url"）:<input type="url" name="url"></label><input type="submit" value="送信"></form>
+<form action="xxx.php" method="post"><label>検索（ type="search"）:<input type="search" name="search"></label><input type="submit" value="送信 "></form>
+<form action="xxx.php" method="post"><label>電話（ type="telephone"）:<input type="tel" name="tel"></label><input type="submit" value="送信 "></form>
+
+<form action="xxx.php" method="post"><label>数値（ type="number"）:<input type="number" name="number"></label><input type="submit" value="送信 "></form>
+<form action="xxx.php" method="post"><label>日付（ type="date"）:<input type="date" name="date"></label><input type="submit" value="送信 "></form>
+<form action="xxx.php" method="post"><label>日時（ type="datetime"）:<input type="datetime" name="datetime"></label><input type="submit" value="送信 "></form>
+<form action="xxx.php" method="post"><label>ローカル日時 （type="datetime-local"）:<input type="datetime-local" name="datetime-local"></label><input type="submit" value="送信"></form>
+
+<form action="xxx.php" method="post"><label>月（ type="month"）:<input type="month" name="month"></label><input type="submit" value="送信 "></form>
+<form action="xxx.php" method="post"><label>週（ type="week"）:<input type="week" name="week"></label><input type="submit" value="送信 "></form>
+<form action="xxx.php" method="post"><label>時間（ type="time"）:<input type="time" name="time"></label><input type="submit" value="送信 "></form>
+<form action="xxx.php" method="post"><label>レンジ（ type="range"）:<input type="range" name="range"></label><input type="submit" value="送信 "></form>
+
+<form action="xxx.php" method="post"><label>色（ type="color"）:<input type="color" name="color"></label><input type="submit" value="送信 "></form> 
+
+<br>
+<h1>練習問題2.8</h1>
+<br>
+<p><label>名前　<input type="text" name="name" size="30" maxlength="20"></label></p>
+<p><label>パスワード　<input type="password" name="pass" size="6" maxlength="4"></label></p>
+<p>学年：
+<label><input type="radio" name="gakunen" value="1">１年生</label>
+<label><input type="radio" name="gakunen" value="2">２年生</label>
+<label><input type="radio" name="gakunen" value="3">３年生</label>
+<label><input type="radio" name="gakunen" value="4">４年生</label>
+<label><input type="radio" name="gakunen" value="5">５年生</label>
+<label><input type="radio" name="gakunen" value="6">６年生</label>
+</p>
+<p>好きな課目：
+<label><input type="checkbox" name="kamoku" value="kokugo">国語</label>
+<label><input type="checkbox" name="kamoku" value="eigo">英語</label> 
+<label><input type="checkbox" name="kamoku" value="sansu">算数</label>
+<label><input type="checkbox" name="kamoku" value="rika">理科</label>
+<label><input type="checkbox" name="kamoku" value="syakai">社会</label>
+<label><input type="checkbox" name="kamoku" value="taiiku">体育</label>
+</p>
+<p><label>宿題ファイル：<input type="file" name="syukudai"></label></p>
+<p>
+<input type="submit" value="送信">
+<input type="reset" value="リセット"> 
+</p>
+
+<br>
+<h1>練習問題3.1</h1>
+<br>
+<a href=“a.html”>相対パスでリンクします</a><br>
+<a href=“https://www.josai.ac.jp/education/managemen/index.html”>
+絶対パスで城西大学経営学部へリンクします。
+</a>
+<br>
+<a href=“mailto:info@yahoo.com”>メール（実際には動きません）</a><br>
+<a href=“https://www.josai.ac.jp/”><img src=“./image/keiei_small.jpg” alt=“城西大学経営学部></a>
+
 
 </body>
 </html>
