--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 <h1>練習問題2.5</h1>
 <br>
 <ul>
-<li
->参考資料を調べ、次のように表示されるHTMLを書きなさい。
-<p style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup><br />
-この授業は<b>情報特講１</b>で、<s>眠くなる</s>大変興味深い内容です。<br />
+<li>
+参考資料を調べ、次のように表示されるHTMLを書きなさい。
+<p style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup><br/>
+この授業は<b>情報特講１</b>で、<s>眠くなる</s>大変興味深い内容です。<br/>
 <bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p>
 </li>
 </ul>
@@ -165,8 +165,43 @@
 <br>
 <h1>練習問題3.3</h1>
 <br>
+<a id="abc">ファイルの途中にabcという名前を付けま す</a><br>
+<a href="#abc">abcと名前を付けた場所へリンクしま す</a><br> <a href="a.html#def">別ファイルの名前を付けた場 所へリンクします</a>
+<br>
+<h1>練習問題3.4</h1>
+<br>
+<aside class=“ad”>
+<h1>広報</h1>
+<a href="https://www.josai.ac.jp/club/jyosisofuto.html">
+<section>
+<h1>城西大学 女子ソフトボール部</h1>
+<p>女子ソフトボール部＜全日本総合女子ソフトボール選手権大会出場決定！＞
+</p>
+</section></a>
+<a href="https://www.josai.ac.jp/news/20200615-04.html">
+<section>
+<h1>城西大学　 JOSAI SPORTS FEILD </h1>
+<p> JOSAI SPORTS FIELD　建設・整備が進んでいます【城西大学 坂戸キャンパス]
+</p>
+<p>城西大学坂戸キャンパスの北側の毛呂山町下川原沼に、サッカー場２面、ソフトボール場１面、
+アップダウンのあるランニングコース、管理施設にはシャワー室やミーティングルームなどを備えた
+新しいグラウンド"JOSAI SPORTS FEILD" が完成間近です。使用開始は、2020年9月の予定です。
+</p>
+</section></a>
 
 
+
+
+
+<h1>練習問題3.5</h1>
+<nav>
+<ul>
+<li><a href="https://www.josai.ac.jp/club/jyosisofuto.html">女子 ソフトボール部</a></li>
+<li><a href="https://www.josai.ac.jp/club/ekiden_hakone.html"> 男子駅伝部</a></li>
+<li><a href="https://www.josai.ac.jp/club/ekiden_joshiekiden.html">女子駅伝部</a></li>
+<li><a>クラブ・サークル活動</a></li>
+</ul>
+</nav> 
 
 </body>
 </html>
