--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 </section></a>
 <a href="https://www.josai.ac.jp/news/20200615-04.html">
 <section>
-<h1>城西大学　 JOSAI SPORTS FEILD </h1>
+<h1>城西大学　 JOSAI SPORTS FEILD</h1>
 <p> JOSAI SPORTS FIELD　建設・整備が進んでいます【城西大学 坂戸キャンパス]
 </p>
 <p>城西大学坂戸キャンパスの北側の毛呂山町下川原沼に、サッカー場２面、ソフトボール場１面、
@@ -188,11 +188,7 @@
 新しいグラウンド"JOSAI SPORTS FEILD" が完成間近です。使用開始は、2020年9月の予定です。
 </p>
 </section></a>
-
-
-
-
-
+</aside>
 <h1>練習問題3.5</h1>
 <nav>
 <ul>
@@ -202,6 +198,5 @@
 <li><a>クラブ・サークル活動</a></li>
 </ul>
 </nav> 
-
 </body>
 </html>
