--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 <li>ほげほげ</li>
 <li>ほにゃらら</li>
 </ol>
-
-
-
+<a id="abc">ここがabcの場所</a> 
 <dl>
 <dt>作者</dt>
 <dd>ジョン</dd>
@@ -166,8 +164,8 @@
 <h1>練習問題3.3</h1>
 <br>
 <a id="abc">ファイルの途中にabcという名前を付けます</a><br>
-<a href="#abc">abcと名前を付けた場所へリンクします</a><br> <a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
-<br>
+<a href="#abc">abcと名前を付けた場所へリンクします</a><br>
+<a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a><br>
 <h1>練習問題3.4</h1>
 <br>
 <aside class=“ad”>
