--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title> Web開発の練習１</title>
 <link rel="stylesheet" href="mystyle.css"> <!-- この行を追加 -->
+<!--<script src="myjs.js"></script>--> <!-- この行を追加 -->
 </head>
 <body>
 <!--文字の大きさの練習-->
@@ -17,6 +18,7 @@
 <li>ほげほげ</li>
 <li>ほにゃらら</li>
 </ol>
+<script src="myjs.js"></script>
 <a id="abc">ここがabcの場所</a> 
 <dl>
 <dt>作者</dt>
@@ -80,12 +82,9 @@
 <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる</td>
 <td>ネタが解凍もの、休みの日は混む</td></tr> 
 </tbody></table>
-<p class="sample1">セキュリティ対策は今後ますます重要にな
-るでしょう。</p>
-<p class="sample2">セキュリティ対策は今後ますます重要にな
-るでしょう。</p>
-<p class="sample3">セキュリティ対策は今後ますます重要にな
-るでしょう。</p>
+<p class="sample1">セキュリティ対策は今後ますます重要になるでしょう。</p>
+<p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
+<p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
 <br>
 <h1>練習問題2.5</h1>
 <br>
