--- a/index.html
+++ b/index.html
@@ -202,7 +202,14 @@
 </ul>
 </nav> 
 
+<!--<h1>イベントハンドラの練習</h1>
+<input type="button" value="ここをクリック"
+ondblclick="alert('Hello, Sohei!');">-->
 
+<script src="ex6-1.js"></script>
+
+<input type="button" value="ここをクリック" onclick="sayhello();sayhello();">
+<input type="button" value="ここをクリック" onclick="saygoodbye();saygoodbye();">
 
 </body>
 </html>
