--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title> Web開発の練習１</title>
 <link rel="stylesheet" href="mystyle.css"> <!-- この行を追加 -->
 <!--<script src="myjs.js"></script>--> <!-- この行を追加 -->
+<script src="ex6-5.js"></script>
 </head>
 <body>
 <!--文字の大きさの練習-->
@@ -210,6 +211,11 @@ ondblclick="alert('Hello, Sohei!');">-->
 
 <input type="button" value="ここをクリック" onclick="sayhello();sayhello();">
 <input type="button" value="ここをクリック" onclick="saygoodbye();saygoodbye();">
+
+<h1>変数の練習</h1>
+<input type="button" value="あいさつ" onclick="sayhello65();">
+<input type="button" value="太郎" onclick="taro();">
+<input type="button" value="花子" onclick="hanako();">
 
 </body>
 </html>
