--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 <title> Web開発の練習１</title>
 <link rel="stylesheet" href="mystyle.css"> <!-- この行を追加 -->
 <!--<script src="myjs.js"></script>--> <!-- この行を追加 -->
+<script src="ex6-1.js"></script>
 <script src="ex6-5.js"></script>
+<script src="ex6-7.js"></script>
 </head>
+
 <body>
 <!--文字の大きさの練習-->
 <br>
@@ -206,16 +209,30 @@
 <!--<h1>イベントハンドラの練習</h1>
 <input type="button" value="ここをクリック"
 ondblclick="alert('Hello, Sohei!');">-->
+<br>
 
-<script src="ex6-1.js"></script>
-
-<input type="button" value="ここをクリック" onclick="sayhello();sayhello();">
+<input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
 <input type="button" value="ここをクリック" onclick="saygoodbye();saygoodbye();">
 
-<h1>変数の練習</h1>
+<h1>変数の練習65</h1>
 <input type="button" value="あいさつ" onclick="sayhello65();">
-<input type="button" value="太郎" onclick="taro();">
-<input type="button" value="花子" onclick="hanako();">
+<input type="button" value="太郎" onclick="taro65();">
+<input type="button" value="花子" onclick="hanako65();">
+
+<h1>変数の練習66</h1>
+<input type="button" value="あいさつ" onclick="sayhello66();">
+<input type="button" value="太郎" onclick="taro66();gakita();">
+<input type="button" value="花子" onclick="hanako66();gakita();">
+
+<h1>引数の練習67</h1>
+<input type="button" value="あいさつ" onclick="sayhello67();">
+<input type="button" value="太郎" onclick="someone('太郎');">
+<input type="button" value="花子" onclick="someone('花子');">
+<br>
+<input type="button" value="レイ" onclick="someone('レイ');">
+<input type="button" value="アスカ" onclick="someone('アスカ');">
+<input type="button" value="シンジ" onclick="someone('シンジ');">
+<br>
 
 </body>
 </html>
