--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@ ondblclick="alert('Hello, Sohei!');">-->
 
 <h1>変数の練習66</h1>
 <input type="button" value="あいさつ" onclick="sayhello66();">
-<input type="button" value="太郎" onclick="taro66();gakita();">
-<input type="button" value="花子" onclick="hanako66();gakita();">
+<input type="button" value="太郎" onclick="taro();gakita();">
+<input type="button" value="花子" onclick="hanako();gakita();">
 
 <h1>引数の練習67</h1>
 <input type="button" value="あいさつ" onclick="sayhello67();">
