--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <!--<script src="myjs.js"></script>--> <!-- この行を追加 -->
 <script src="ex6-1.js"></script>
 <script src="ex6-5.js"></script>
+<script src="ex6-6.js"></script>
 <script src="ex6-7.js"></script>
 </head>
 
@@ -211,8 +212,10 @@
 ondblclick="alert('Hello, Sohei!');">-->
 <br>
 
+ <!--
 <input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
 <input type="button" value="ここをクリック" onclick="saygoodbye();saygoodbye();">
+-->
 
 <h1>変数の練習65</h1>
 <input type="button" value="あいさつ" onclick="sayhello65();">
@@ -220,18 +223,18 @@ ondblclick="alert('Hello, Sohei!');">-->
 <input type="button" value="花子" onclick="hanako65();">
 
 <h1>変数の練習66</h1>
-<input type="button" value="あいさつ" onclick="sayhello66();">
-<input type="button" value="太郎" onclick="taro();gakita();">
-<input type="button" value="花子" onclick="hanako();gakita();">
+ <input type="button" value="あいさつ" onclick="sayhello66();">
+ <input type="button" value="太郎" onclick="taro();gakita();">
+ <input type="button" value="花子" onclick="hanako();gakita();">
 
 <h1>引数の練習67</h1>
-<input type="button" value="あいさつ" onclick="sayhello67();">
-<input type="button" value="太郎" onclick="someone('太郎');">
-<input type="button" value="花子" onclick="someone('花子');">
+ <input type="button" value="あいさつ" onclick="sayhello67();">
+ <input type="button" value="太郎" onclick="someone('太郎');">
+ <input type="button" value="花子" onclick="someone('花子');">
 <br>
-<input type="button" value="レイ" onclick="someone('レイ');">
-<input type="button" value="アスカ" onclick="someone('アスカ');">
-<input type="button" value="シンジ" onclick="someone('シンジ');">
+ <input type="button" value="レイ" onclick="someone('レイ');">
+ <input type="button" value="アスカ" onclick="someone('アスカ');">
+ <input type="button" value="シンジ" onclick="someone('シンジ');">
 <br>
 
 </body>
