--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 <script src="ex6-5.js"></script>
 <script src="ex6-6.js"></script>
 <script src="ex6-7.js"></script>
+<script src="ex06-8.js"></script>
+<script src="ex06-9.js"></script>
+<script src="ex06-10.js"></script>
+<script src="ex06-11.js"></script>
+<script src="ex06-12.js"></script>
+<script src="ex06-13.js"></script>
 </head>
 
 <body>
+
 <!--文字の大きさの練習-->
+<!-- 
 <br>
 <h1>練習問題2.2</h1>
 <br>
@@ -206,6 +214,7 @@
 <li><a>クラブ・サークル活動</a></li>
 </ul>
 </nav> 
+-->
 
 <!--<h1>イベントハンドラの練習</h1>
 <input type="button" value="ここをクリック"
@@ -235,6 +244,13 @@ ondblclick="alert('Hello, Sohei!');">-->
  <input type="button" value="レイ" onclick="someone('レイ');">
  <input type="button" value="アスカ" onclick="someone('アスカ');">
  <input type="button" value="シンジ" onclick="someone('シンジ');">
+<br>
+
+<h1>JavaScriptによる変更の練習68</h1>
+ <input type="button" value="あいさつ" onclick="sayhello68();">
+ <input type="button" value="太郎" onclick="taro68();">
+ <input type="button" value="花子" onclick="hanako68();">
+ <p id="who68">最初はworld</p>
 <br>
 
 </body>
