--- a/index.html
+++ b/index.html
@@ -221,9 +221,16 @@
 ondblclick="alert('Hello, Sohei!');">-->
 <br>
 
- <!--
-<input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
-<input type="button" value="ここをクリック" onclick="saygoodbye();saygoodbye();">
+<!--  
+<input type="button" value="ここをクリック" onclick="sayhello();">
+<br>
+<br>
+<input type="button" value="ここをクリック" onclick="sayhello();sayhello();">
+<br>
+<br>
+<input type="button" value="関数Good Byeを呼び出し" onclick="goodbye();">
+<br>
+<br>
 -->
 
 <h1>変数の練習65</h1>
@@ -252,6 +259,27 @@ ondblclick="alert('Hello, Sohei!');">-->
  <input type="button" value="花子" onclick="hanako68();">
  <p id="who68">最初はworld</p>
 <br>
+
+<h1>JavaScriptによるページの変更69</h1>
+    <div id="txt1" >
+      <input type="button" value="テキストの変更" onclick="txtchange1();">城西大学</div>
+
+<br>
+  <input type="button" value="画像の変更" onclick="imgchange1();">
+  <img src='./image/josai.png' id="logo" alt="Josai Logo">
+<br>
+
+<br>
+  <!--  <div id="logo"><img src='./image/josai.png' alt="Josai Logo"></div>
+  -->
+  <!--
+  <div id="logo"><img src='./image/josai.png'></div>
+     <input type="button" value="画像の変更" onclick="show_innerHTML();imgchange2();show_innerHTML();">
+ -->
+ <!--     <input type="button" value="画像の変更" onclick="show_innerHTML();">
+-->
+<br>
+
 
 </body>
 </html>
