--- a/index.html
+++ b/index.html
@@ -253,31 +253,30 @@ ondblclick="alert('Hello, Sohei!');">-->
  <input type="button" value="シンジ" onclick="someone('シンジ');">
 <br>
 
-<h1>JavaScriptによる変更の練習68</h1>
- <input type="button" value="あいさつ" onclick="sayhello68();">
- <input type="button" value="太郎" onclick="taro68();">
- <input type="button" value="花子" onclick="hanako68();">
- <p id="who68">最初はworld</p>
+<input type="button" value="あいさつ" onclick="sayhello68();">
+<input type="button" value="太郎" onclick="taro68();">
+<input type="button" value="花子" onclick="hanako68();">
+<p id="who68">最初はworld</p>
+
 <br>
 
 <h1>JavaScriptによるページの変更69</h1>
     <div id="txt1" >
-      <input type="button" value="テキストの変更" onclick="txtchange1();">城西大学</div>
+      <input type="button" value="テキストの変更" onclick="txtchange69();">城西大学</div>
+<br>
+    <div id="image1" >
+      <input type="button" value="画像の変更" onclick="imgchange69();">
+  <img src='./image/onepiece06_chopperⅠ.png' id="logo" alt="josai.png"></div>
+<br>
 
+<h1>JavaScriptによるページの変更610</h1>
 <br>
-  <input type="button" value="画像の変更" onclick="imgchange1();">
-  <img src='./image/josai.png' id="logo" alt="Josai Logo">
+    <div id="image1" >
+    <input type="button" value="画像の変更" onclick="imgchange01();">
+  <img src="./image/onepiece06_chopperⅠ.png" id="logo01" alt="onepiece06_chopperⅡ.png"></div>
+<input type="button" value="戻る" onclick="imgchange02();">
 <br>
 
-<br>
-  <!--  <div id="logo"><img src='./image/josai.png' alt="Josai Logo"></div>
-  -->
-  <!--
-  <div id="logo"><img src='./image/josai.png'></div>
-     <input type="button" value="画像の変更" onclick="show_innerHTML();imgchange2();show_innerHTML();">
- -->
- <!--     <input type="button" value="画像の変更" onclick="show_innerHTML();">
--->
 <br>
 
 
