--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 <script src="ex6-5.js"></script>
 <script src="ex6-6.js"></script>
 <script src="ex6-7.js"></script>
-<script src="ex06-8.js"></script>
-<script src="ex06-9.js"></script>
-<script src="ex06-10.js"></script>
-<script src="ex06-11.js"></script>
-<script src="ex06-12.js"></script>
-<script src="ex06-13.js"></script>
+<script src="ex6-8.js"></script>
+<script src="ex6-9.js"></script>
+<script src="ex6-10.js"></script>
+<script src="ex6-11.js"></script>
+<script src="ex6-12.js"></script>
+<script src="ex6-13.js"></script>
 </head>
-
 <body>
 
 <!--文字の大きさの練習-->
@@ -253,6 +252,7 @@ ondblclick="alert('Hello, Sohei!');">-->
  <input type="button" value="シンジ" onclick="someone('シンジ');">
 <br>
 
+<h1>JavaScriptによる変更の練習68</h1>
 <input type="button" value="あいさつ" onclick="sayhello68();">
 <input type="button" value="太郎" onclick="taro68();">
 <input type="button" value="花子" onclick="hanako68();">
