--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ ondblclick="alert('Hello, Sohei!');">-->
 <br>
     <div id="image1" >
     <input type="button" value="画像の変更" onclick="imgchange01();">
-  <img src="./image/onepiece06_chopperⅠ.png" id="logo01" alt="onepiece06_chopperⅡ.png"></div>
+  <img src="./image/onepiece06_chopperⅠ.png" id="logo01" alt="onepiece01_luffy.png"></div>
 <input type="button" value="戻る" onclick="imgchange02();">
 <br>
 
